# ubungo-iq

./: .env.postgres  .gitignore  Dockerfile  PRODUCTION_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  google_trends_workflow.json  manage.py  pyproject.toml  pytest.ini  setup_postgres_local.sh  test_dark_mode.html
.github/workflows/: deploy.yml
blog/: admin.py  admin_ai.py  admin_scraping.py  alerts.py  analysis.py  analytics.py  content_templates.py  features.py  image_optimization.py  managers.py  models.py  models_ai.py  models_scraping.py  seo.py  signals.py  tasks.py  tasks_alerts.py  tasks_scraping.py  urls.py  views.py  views_dashboard.py  views_htmx.py  views_improved.py  wagtail_hooks.py
blog/migrations/: 0001_initial.py  0002_articlepage_featured_articlepage_view_count_and_more.py  0003_articlepage_meta_description.py  0004_add_ai_content_models.py  0005_add_web_scraping_models.py  0006_auto_20250815_1006.py  0007_remove_scrapeddata_price_and_more.py  0008_stockhistory.py
blog/templatetags/: cache_busting.py  seo_tags.py
deploy/: docker-compose.prod.yml  env.example
docker/nginx/: nginx.txt
docker/postgres/: init.sql
home/: blocks.py  models.py  urls.py  views.py
home/migrations/: 0003_homepage_intro.py  0004_homepage_content_sections.py
static/css/: modern-blog.css
tests/: setup.py  test_functional.py  test_functional_demo.py  test_functional_simple.py  test_models.py  test_tasks.py  test_views.py
ubongo/: celery.py  middleware.py  urls.py  views.py  wsgi.py
utils/: ai_client.py  generators.py  middleware.py  scrapers.py
(+70 files in other folders)
